AP-21251: Clean up `FileUtil`
AP-21251 (Cannot change component link type when it is workflow-relative)